--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,19 @@
-== README
+********* FITNESS APP *********
+Trainer Functions:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+add movements (exercises)
 
-Things you may want to cover:
+add routines, consisting of those movements
 
-* Ruby version
+add tags to exercises (core, arms, legs, etc..), the routines inherit those tags
 
-* System dependencies
+version 2
 
-* Configuration
+add embedded video
 
-* Database creation
+exercise has list of necessary equipment
 
-* Database initialization
+have a client list and a client schedule
 
-* How to run the test suite
+predetermine a workout routine for a certain client on a certain day.
 
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
